--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
     <link href='assets/css/style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <header>
-      <h1>Crystals Collector</h1>
-        <div id="score-heading">
-          <h2>Your Score</h2>
+      <div id="container">
+        <div id="header">Crystals Collector</div>
+          <div id="score-head">Your Score</div>
+            <div id="score-box"></div>
+              <div id="crystal-head"></div>
+                <div id="crystals"></div>
+                  <div id="guess-head">This is what you need to guess</div>
+                    <div id ="guess-box"></div>
+                      <div id="win-loss-head"></div>
+                        <div id="win-loss"></div>
+
+
         </div>
 
-    </header>
+
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
