--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
         <div id="header">Crystals Collector</div>
           <div id="score-head">Your Score</div>
             <div id="score-box"></div>
-              <div id="crystal-head"></div>
-                <div id="crystals"></div>
+              <div id="crystal-head">Here are some Crystals</div>
+                <div id="crystals">
+                <img src="assets/images/diamond.jpg" id="diamond" height="95" width="40">
+                <img src="assets/images/amethyst.jpg" id="amethyst" height="95" width="40">
+                <img src="assets/images/emerald.jpg" id="emerald" height="95" width="40">
+                <img src="assets/images/garnet.jpg" id="garnet" height="95" width="40">
+                </div>
                   <div id="guess-head">This is what you need to guess</div>
                     <div id ="guess-box"></div>
-                      <div id="win-loss-head"></div>
-                        <div id="win-loss"></div>
-
+                      <div id= "win-container">
+                        <div id="win-loss-head">Win/Loss Count</div>
+                          <div id="win-loss1"></div><div id="win-loss2"></div>
+                      </div>
 
         </div>
 
