mobile responsive css

--- a/index.html
+++ b/index.html
@@ -10,28 +10,22 @@
     <link href='assets/css/style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-      <div id="container">
-        <div id="header">Crystals Collector</div>
-          <div id="score-head">Your Score</div>
-            <div id="score-box"></div>
-              <div id="crystal-head">Here are some Crystals</div>
+        <div id="header"><h1>Crystals Collector</h1></div>
+          <div id="score-head"><h2>Your Score:</h2></div>
+            <div id="score-box"><span id="sb"></span></div>
+              <div id="crystal-head">Here are some Crystals. They each contain a number, please click them to see. In order to win this game, your score needs to be exactly the same as the number shown below. If your score is more than this number, you lose. Start clicking on the crystals to play the game.</div>
                 <div id="crystals">
-                <img src="assets/images/diamond.jpg" id="diamond" height="95" width="40">
-                <img src="assets/images/amethyst.jpg" id="amethyst" height="95" width="40">
-                <img src="assets/images/emerald.jpg" id="emerald" height="95" width="40">
-                <img src="assets/images/garnet.jpg" id="garnet" height="95" width="40">
+                <img src="assets/images/diamond.jpg" id="diamond" height="95" width="95">
+                <img src="assets/images/amethyst.jpg" id="amethyst" height="95" width="95">
+                <img src="assets/images/emerald.jpg" id="emerald" height="95" width="95">
+                <img src="assets/images/garnet.jpg" id="garnet" height="95" width="95">
                 </div>
-                  <div id="guess-head">This is what you need to guess</div>
-                    <div id ="guess-box"></div>
+                  <div id="guess-head"><h4>This is what you need to guess:</h4></div>
+                    <div id ="guess-box"><span id="gb"></span></div>
                       <div id= "win-container">
-                        <div id="win-loss-head">Win/Loss Count</div>
-                          <div id="win-loss1"></div><div id="win-loss2"></div>
+                        <div id="win-loss-head">Win/Loss</div>
+                          <div id="win-loss"><span id="win"></span><span id="loss"></span></div>
                       </div>
-
-        </div>
-
-
-
 
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
